Soft Box increment 1: filament rigid-rod overdamped Langevin slice (FDT-validated)
SoA FilamentStore + four named TornadoVM PTX systems (dragTensor, brownianForce,
rigidRodLangevinIntegration, derivedGeometry). Free-rod diffusion harness validates
measured D_trans (per body axis) and D_rot against the Einstein relation D=kT/gamma
from the same drag tensors, within 5% on the aorus RTX 5070 (-2.5/-1.2/+0.1/-1.8%).
gamma ported line-for-line from v1 FilSegment.calculateProperties; device RNG reuses
v1's Wang-hash + Box-Muller. No chain/bending/neighbors/walls/motors/membrane/biochem.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>