@@ -2,6 +2,91 @@
 
 Last updated: 2026-06-13
 
+## 2026-06-13 — Increment 1: filament rigid-rod overdamped Langevin slice — FDT PASS
+First real code. `softbox/` package: SoA component-array core + four named systems as TornadoVM PTX
+kernels, validated against the fluctuation–dissipation (Einstein) relation on the aorus RTX 5070.
+Built/ran with the v1 toolchain (Java 21 + TornadoVM 4.0.1-dev PTX, `--enable-preview`, `-g`,
+`@tornado-argfile`). No chain/bending forces, neighbors, walls, motors, membrane, or biochem.
+
+**Component-array layout (FilamentStore — the canonical store).** Pose `coord`/`uVec`/`yVec`;
+derived (recomputed, NOT source of truth) `zVec`/`end1`/`end2`; geometry `monomerCount`→`segLength`;
+body-frame diagonal drag/diffusion `bTransGam`/`bRotGam`/`bTransDiff`/`bRotDiff`; per-step
+accumulators `forceSum`/`torqueSum` (deterministic, zeroed) + `randForce`/`randTorque` (Brownian);
+per-rod `brownTransScale`/`brownRotScale`; inert chain topology `end1NbrSlot/Side`,`end2NbrSlot/Side`
+(sentinel −1 = free; integer (slot,side) from birth per migration-doc A1, ready for increment 2 to
+read without reshaping).
+
+**FLAGGED layout decision — planar SoA, not one-array-per-component.** TornadoVM's `task()` tops out
+at 15 args (`TornadoFunctions$Task15`); the integration kernel needs ~27 component planes, so strictly
+separate `xPos[]`/`yPos[]`/`zPos[]` FloatArrays are impossible to launch. Each vector quantity is one
+device buffer in planar `[X-plane | Y-plane | Z-plane]` layout (x's contiguous, then y's, then z's) —
+genuine SoA (coalesced, non-interleaved), NOT AoS `[x0 y0 z0 x1…]`. Named `coordX/Y/Z()` plane
+accessors keep each component findable. The architectural invariant (no per-object fields, no AoS
+interleave, device-resident) holds; the packing is a device-arity accommodation only.
+
+**Four systems (free functions over arrays; each one identifiable physics).**
+1. `DragTensorSystem` (host, runs once) — ports `FilSegment.calculateProperties()` line-for-line.
+2. `BrownianForceSystem` (device) — fills `randForce`/`randTorque` body-frame from diffusion tensors +
+   the REUSED v1 device RNG (Wang hash + Box-Muller, keyed `(slot,stepCount,runSeed)`; verbatim from
+   `GPUMoveThing.moveThingKernel`/`wangHash`, per RESIDENCY_INVENTORY §3 — no new RNG invented).
+3. `RigidRodLangevinIntegrationSystem` (device) — overdamped Euler: body force = Rᵀ·forceSum +
+   randForce → `bVeloc = 1e6·bForce/bTransGam`; body torque → `deltaBAng` rotation of uVec/yVec;
+   port of `FilSegment.moveThing()` fused with the v1 device integration, minus inlined Brownian.
+4. `DerivedGeometrySystem` (device) — recompute `zVec`/`end1`/`end2` and re-orthogonalize `yVec`
+   (port of `Thing.recomputeDerivedSoA`). Output only this increment.
+All four run as kernels over resident arrays in one TaskGraph (brownian→integrate→derived); pose is
+FIRST_EXECUTION + pulled UNDER_DEMAND only at output cadence — **no per-step host pose pull**.
+
+**Force-coverage audit (this slice has exactly two force sources).**
+| force source | path | applied | notes |
+|---|---|---|---|
+| deterministic `forceSum`/`torqueSum` (lab) | init 0; no kernel writes it | genuinely **zero** | free rod: no chain/wall/motor/node forces exist yet |
+| Brownian `randForce`/`randTorque` (body) | `BrownianForceSystem` writes once/step; `RigidRodLangevinIntegrationSystem` reads once | **exactly once** | no double-count; a 2× would give 4× D (+300%), not the observed ∓2% |
+Verdict: every force applied on exactly one path — never zero-by-accident (the zero is real), never
+twice. The FDT pass at the bare amplitude confirms no missing/extra factor.
+
+**Code-fidelity cross-check (γ formula, code-level not run).** `DragTensorSystem.run()` reproduces
+`FilSegment.calculateProperties()` (v1ref `FilSegment.java:420-441`) arithmetic byte-for-byte:
+`bTransGam.x=(2πη·Lₘ)/(ln(Lₘ/2rₘ)+aParallel)`, `.y=.z=(4πη·Lₘ)/(…+aOrthog)`, `bRotGam.x=4πη·rₘ²·Lₘ`,
+`.y=.z=(πη·Lₘ³)/(3(…+aTurning))`, then Einstein `D=kT/γ`; same min-length clamp (`stdSegLength·halfmono`
+for a free/at-end rod), same `length=(monomerCt+1)·actinMonoRadius`, same constants (Boltz, tempK,
+aeta=0.1, aParallel/aOrthog/aTurning). Only diff: SoftBox reads `Constants.*` where v1 reads
+`Env.*.getValue()` (identical values). FDT self-consistency + faithful γ together pin both the
+amplitude→drag coupling and the tensor values.
+
+**Measurement protocol.** N=8192 free rods, monomerCt=64 (L=0.1755 µm), dt=1e-4 s, aeta=0.1 Pa·s.
+- Config T (translational anisotropy): rotational Brownian OFF, orientation frozen along lab-x so body
+  axes ≡ lab axes; M=20000 steps, pose pulled every 200; per-axis MSD slope through origin → D = slope/2.
+- Config R (rotational): translational Brownian OFF; M=4000, uVec pulled every 20; orientational
+  autocorrelation C(t)=⟨uₓ(t)⟩ fit to exp(−2D_rot·t) over C∈(0.2,0.95) (22 samples).
+Both B-coefficients set to 1.0 so the bare relation D=kT/γ holds; v1's production BTransCoeff=1/
+BRotCoeff=0.5 (and the lone-segment rot-Brownian-off rule) are biological persistence-length tuning
+knobs, deliberately out of scope for the amplitude-coupling check.
+
+**Validation numbers (measured vs FDT prediction from the SAME γ arrays; tol 5%).** γ_par=3.649e-08,
+γ_perp=5.430e-08 N·s/m; γ_rot⊥=2.211e-22 N·m·s/rad.
+| quantity | measured | FDT D=kT/γ | relErr |
+|---|---|---|---|
+| D_trans∥ (µm²/s) | 0.10996 | 0.11280 | −2.52% |
+| D_trans⊥ y (µm²/s) | 0.07494 | 0.07581 | −1.15% |
+| D_trans⊥ z (µm²/s) | 0.07587 | 0.07581 | +0.08% |
+| D_rot⊥ (rad²/s) | 18.280 | 18.615 | −1.80% |
+**FDT VALIDATION PASS.** Tolerance 5% justified a priori: float32 (v1 GPU path precision) + ~1/√N
+ensemble noise + O(D·dt) first-order-Euler bias. The small consistent negative bias (≈−1 to −2.5%) is
+that Euler/float32 systematic, not a wrong factor (which would be tens of %). Per Lesson 6 we did NOT
+reach for double precision — the magnitude argument says a wrong integration factor is far likelier
+than float rounding moving D by a measurable amount, and here the factor is right.
+
+Two TornadoVM gotchas worth recording: (1) a kernel method literally named `kernel` collides with an
+OpenCL/PTX reserved token — rename (we use `brownianForce`/`integrate`/`derive`); (2) the default
+block size overflows the register file for these (RNG-/trig-heavy) kernels → CUDA 701
+(LAUNCH_OUT_OF_RESOURCES) — set an explicit `WorkerGrid1D` localWork=64 via a `GridScheduler` keyed
+`"rodLangevin.<task>"` (matches v1 `MOVE_KERNEL_BLOCK_SIZE`). Run log: `RUN_LOGS/2026-06-13_inc1_fdt.log`.
+
+Open / next: increment 2 — actin chain / bending-force system. Starts READING the inert
+`end1Nbr*/end2Nbr*` topology arrays laid down here (no storage reshape). The derived end1/end2
+sign convention (end1 = coord − L/2·uVec) is now the one chain forces will read.
+
 ## 2026-06-13 — Increment 0: workspace scaffolded
 Soft Box repo initialized at `~/Code/SoftBox` as a new repo (not a BoA branch). Frozen-v1 reference
 set up as a read-only `git worktree` at `~/Code/BoA-v1ref`, detached at tag
